@@ -566,3 +566,9 @@ Miscellaneous
      turned on, via the CHANNEL(trace) dialplan function.  Could be useful for
      dialplan debugging.
   * iLBC source code no longer included (see UPGRADE.txt for details)
+  * A new option for the configure script, --enable-internal-poll, has been added
+    for use with systems which may have a buggy implementation of the poll system
+	call. If you notice odd behavior such as the CLI being unresponsive on remote
+	consoles, you may want to try using this option. This option is enabled by default
+	on Darwin systems since it is known that the Darwin poll() implementation has
+	odd issues.
